webhub.. final push

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 	<img src="/image/bgani.jpg" border="1">
 	<br><br>
 
-	<a target="_blank" href="https://web.facebook.com"><img src="/image/fcbk.png" width="30"></a>
-	<a target="_blank" href="https://twitter.com/"><img src="/image/twttr.png" width="30"></a>
+	<a target="_blank" href="https://web.facebook.com/kissanime.ru/"><img src="/image/fcbk.png" width="30"></a>
+	<a target="_blank" href="https://twitter.com/KissAnimeHd"><img src="/image/twttr.png" width="30"></a>
 
 </center>
