--- a/anotherPage.html
+++ b/anotherPage.html
@@ -4,5 +4,11 @@
 	<a href="/"><img src="/image/sharingan.png" width="100" height="100"></a>
 	<br><br>
 	<h2><a href="/" style="text-decoration: none; color: black;">Home</a> | <a href="/watch" style="text-decoration: none; color: black;">Watch</a> | <a href="anotherPage" style="text-decoration: none; color: black;">Another Page</h2>
+	<br><br>
+	<h1>coming soon..</h1>
+
+	<br><br>
+	<a target="_blank" href="https://web.facebook.com/kissanime.ru/"><img src="/image/fcbk.png" width="30"></a>
+	<a target="_blank" href="https://twitter.com/KissAnimeHd"><img src="/image/twttr.png" width="30"></a>
 
 </center>
