--- a/watch.html
+++ b/watch.html
@@ -5,7 +5,11 @@
 	<br><br>
 	<h2><a href="/" style="text-decoration: none; color: black;">Home</a> | <a href="/watch" style="text-decoration: none; color: black;">Watch</a> | <a href="anotherPage" style="text-decoration: none; color: black;">Another Page</h2>
 	<br><br>
-	<a href="http://kissanime.ru/Anime/Boruto-Naruto-Next-Generations"><img src="/image/boruto.jpg" width="500"></a>
-	<a href="http://kissanime.ru/Anime/Boku-no-Hero-Academia-My-Hero-Academia"><img src="/image/boku.jpg" width="500"></a>
+	<a target="_blank" href="http://kissanime.ru/Anime/Boruto-Naruto-Next-Generations"><img src="/image/boruto.jpg" width="400"></a>
+	<a target="_blank" href="http://kissanime.ru/Anime/Boku-no-Hero-Academia-My-Hero-Academia"><img src="/image/boku.jpg" width="400"></a>
+
+	<br><br>
+	<a target="_blank" href="https://web.facebook.com/kissanime.ru/"><img src="/image/fcbk.png" width="30"></a>
+	<a target="_blank" href="https://twitter.com/KissAnimeHd"><img src="/image/twttr.png" width="30"></a>
 
 </center>
