--- a/Boku.html
+++ b/Boku.html
@@ -14,9 +14,13 @@
 		<p>
 			---------- <a href="/" style="color: #000000;">Home</a> | <a href="/list" style="color: #000000;">List</a> | <a href="anotherPage" style="color: #000000;">Another Page</a> ----------
 		</p>
-	<a href="/list">
-	<img src="/image/yess.png" border="0" height="600" width="1200" alt="List Anime">
-	</a>
+		<br>
+		<br>
+		<p>
+			<a target="_blank" href="http://kissanime.ru/Anime/Boku-no-Hero-Academia-My-Hero-Academia">Kissanime</a>
+			<br>
+			<a target="_blank" href="http://www.animefreak.tv/watch/boku-no-hero-academia-online">Anime Freak</a>
+		</p>
 	</center>
 	<br>
 </div>
