--- a/Boruto.html
+++ b/Boruto.html
@@ -14,9 +14,17 @@
 		<p>
 			---------- <a href="/" style="color: #000000;">Home</a> | <a href="/list" style="color: #000000;">List</a> | <a href="anotherPage" style="color: #000000;">Another Page</a> ----------
 		</p>
-	<a href="/list">
-	<img src="/image/yess.png" border="0" height="600" width="1200" alt="List Anime">
-	</a>
+		<br>
+		<br>
+		<p>
+			<a target="_blank" href="http://kissanime.ru/Anime/Boruto-Naruto-Next-Generations">Kissanime</a>
+			<br>
+			<a target="_blank" href="http://www.anime-planet.com/anime/boruto-naruto-next-generations/videos">Anime Planet</a>
+			<br>
+			<a target="_blank" href="http://www.crunchyroll.com/boruto-naruto-next-generations">Crunchyroll</a>
+			<br>
+			<a target="_blank" href="http://www.animefreak.tv/watchon/boruto-naruto-next-generations-online">Anime Freak</a>
+		</p>
 	</center>
 	<br>
 </div>
