--- a/watch.html
+++ b/watch.html
@@ -7,6 +7,11 @@
 	<br><br>
 	<a target="_blank" href="http://kissanime.ru/Anime/Boruto-Naruto-Next-Generations"><img src="/image/boruto.jpg" width="400"></a>
 	<a target="_blank" href="http://kissanime.ru/Anime/Boku-no-Hero-Academia-My-Hero-Academia"><img src="/image/boku.jpg" width="400"></a>
+	<a target="_blank" href="http://kissanime.ru/Anime/One-Punch-Man"><img src="/image/1Punch.jpg" width="400"></a>
+	<a target="_blank" href="http://kissanime.ru/Anime/One-Piece"><img src="/image/1Piece.jpg" width="400"></a>
+	<a target="_blank" href="http://kissanime.ru/Anime/Dragon-Ball-Super"><img src="/image/DbSuper.jpg" width="400"></a>
+	<a target="_blank" href="http://kissanime.ru/Anime/Akame-ga-Kill"><img src="/image/Akame.jpg" width="400"></a>
+	<a target="_blank" href="http://kissanime.ru/Anime/Noragami"><img src="/image/noragami.jpg" width="400"></a>
 
 	<br><br>
 	<a target="_blank" href="https://web.facebook.com/kissanime.ru/"><img src="/image/fcbk.png" width="30"></a>
