--- a/anotherPage.html
+++ b/anotherPage.html
@@ -1,14 +1,30 @@
-<center>
-	
+<!DOCTYPE html>
+<html style="background: url(image/bgani.jpg); background-size: 100% 100%; background-repeat: repeat-y;">
+<head>
+	<title>Watch anime</title>
+	<link rel="stylesheet" type="text/css" href="css/style.css" />
+</head>
+<body>
+<div class="container">
 	<br>
-	<a href="/"><img src="/image/sharingan.png" width="100" height="100"></a>
-	<br><br>
-	<h2><a href="/" style="text-decoration: none; color: black;">Home</a> | <a href="/watch" style="text-decoration: none; color: black;">Watch</a> | <a href="anotherPage" style="text-decoration: none; color: black;">Another Page</h2>
-	<br><br>
-	<h1>coming soon..</h1>
-
-	<br><br>
-	<a target="_blank" href="https://web.facebook.com/kissanime.ru/"><img src="/image/fcbk.png" width="30"></a>
-	<a target="_blank" href="https://twitter.com/KissAnimeHd"><img src="/image/twttr.png" width="30"></a>
-
-</center>
+	<center>
+		<a href="/"><img src="/image/sharingan.png" width="100" height="100"></a>
+		<br>
+		<br>
+		<p>
+			---------- <a href="/" style="color: #000000;">Home</a> | <a href="/list" style="color: #000000;">List</a> | <a href="anotherPage" style="color: #000000;">Another Page</a> ----------
+		</p>
+	<h1>Coming soon</h1>
+	</center>
+	<br>
+</div>
+<div class="footer">
+	<center>
+		<p>
+			<a target="_blank" href="https://web.facebook.com/kissanime.ru/"><img src="/image/fcbk.png" width="50"></a>
+			<a target="_blank" href="https://twitter.com/KissAnimeHd"><img src="/image/twttr.png" width="50"></a>
+		</p>
+	</center>
+</div>
+</body>
+</html>
