--- a/Boruto.html
+++ b/Boruto.html
@@ -1,40 +1,83 @@
 <!DOCTYPE html>
-<html style="background: url(image/bgani.jpg); background-size: 100% 100%; background-repeat: repeat-y;">
+<html>
 <head>
-	<title>Watch anime</title>
-	<link rel="stylesheet" type="text/css" href="css/style.css" />
+  <title>Watch anime</title>
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta/css/bootstrap.min.css" integrity="sha384-/Y6pD6FV/Vv2HJnA6t+vslU6fwYXjCFtcEpHbNJ0lyAFsXTsjBbfaDjzALeQsN6M" crossorigin="anonymous">
+  <link rel="stylesheet" type="text/css" href="css/style.css" />
+  <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.11.0/umd/popper.min.js" integrity="sha384-b/U6ypiBEHpOf/4+1nzFpr53nxSS+GLCkfwBdFNTxtclqqenISfwAzpKaMNFNmj4" crossorigin="anonymous"></script>
+<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta/js/bootstrap.min.js" integrity="sha384-h0AbiXch4ZDo7tp9hKZ4TsHbi047NrKGLO3SEJAg45jXxnGIfYzk4Si90RDIqNm1" crossorigin="anonymous"></script>
 </head>
 <body>
+  <nav class="navbar navbar-expand-lg navbar-light bg-light sticky-top">
+      <a class="navbar-brand" href="/"><img src="/image/sharingan.png" height="75" width="75"></a>
+      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+
+      <div class="collapse navbar-collapse" id="navbarSupportedContent">
+        <ul class="navbar-nav mr-auto">
+            <li class="nav-item active">
+              <a class="nav-link" href="/">Home <span class="sr-only">(current)</span></a>
+            </li>
+            <li class="nav-item">
+<div class="btn-group">
+  <a class="nav-link" href="/list">List</a>
+  <a class="btn dropdown-toggle dropdown-toggle-split" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+    <span class="sr-only">Toggle Dropdown</span>
+  </a>
+  <div class="dropdown-menu">
+    <a class="dropdown-item" href="/Boruto">Boruto</a>
+    <a class="dropdown-item" href="/Boku">Boku</a>
+    <a class="dropdown-item" href="/OPM">One Punch Man</a>
+    <div class="dropdown-divider"></div>
+    <a class="dropdown-item" href="/list">More...</a>
+    </div>
+  </div>
+          </li>
+            <li class="nav-item">
+              <a class="nav-link disabled" href="/anotherPage">-</a>
+            </li>
+        </ul>
+        <form class="form-inline my-2 my-lg-0">
+            <input class="form-control mr-sm-2" type="text" placeholder="Search" aria-label="Search">
+            <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
+        </form>
+      </div>
+  </nav>
 <div class="container">
-	<br>
-	<center>
-		<a href="/"><img src="/image/sharingan.png" width="100" height="100"></a>
-		<br>
-		<br>
-		<p>
-			---------- <a href="/" style="color: #000000;">Home</a> | <a href="/list" style="color: #000000;">List</a> | <a href="anotherPage" style="color: #000000;">Another Page</a> ----------
-		</p>
-		<br>
-		<br>
-		<p>
-			<a target="_blank" href="http://kissanime.ru/Anime/Boruto-Naruto-Next-Generations">Kissanime</a>
-			<br>
-			<a target="_blank" href="http://www.anime-planet.com/anime/boruto-naruto-next-generations/videos">Anime Planet</a>
-			<br>
-			<a target="_blank" href="http://www.crunchyroll.com/boruto-naruto-next-generations">Crunchyroll</a>
-			<br>
-			<a target="_blank" href="http://www.animefreak.tv/watchon/boruto-naruto-next-generations-online">Anime Freak</a>
-		</p>
-	</center>
-	<br>
+  <br>
+  <center>
+    <p>
+    	<table border="0" bgcolor="#FFF1C4">
+  			<tr>
+   				<td colspan="2" rowspan="2" width="400" height="550" align="left" valign="center" style="padding-left: 15px;"><img src="/image/boruto.jpg" width="375" height="500"></td>
+    			<td height="350" width="450" valign="top" style="padding: 35px 5px 0 5px"><h4>Naruto was a young shinobi with an incorrigible knack for mischief. He achieved his dream to become the greatest ninja in the village and his face sits atop the Hokage monument. But this is not his story... A new generation of ninja are ready to take the stage, led by Naruto's own son, Boruto! </h4></td>
+  			</tr>
+  			<tr>
+    			<td width="450" style="padding: 5px 0 5px 5px">
+    				<a target="_blank" href="http://kissanime.ru/Anime/Boruto-Naruto-Next-Generations">Kissanime</a>
+      				<br>
+      				<a target="_blank" href="http://www.anime-planet.com/anime/boruto-naruto-next-generations/videos">Anime Planet</a>
+      				<br>
+      				<a target="_blank" href="http://www.crunchyroll.com/boruto-naruto-next-generations">Crunchyroll</a>
+      				<br>
+      				<a target="_blank" href="http://www.animefreak.tv/watchon/boruto-naruto-next-generations-online">Anime Freak</a>
+      				<br>
+      				<a target="_blank" href="https://animestreams.tv/boruto-naruto-next-generations-sub/">AnimeStreams</a>
+      			</td>
+  			</tr>
+  		</table>
+    </p>
+  </center>
 </div>
 <div class="footer">
-	<center>
-		<p>
-			<a target="_blank" href="https://web.facebook.com/kissanime.ru/"><img src="/image/fcbk.png" width="50"></a>
-			<a target="_blank" href="https://twitter.com/KissAnimeHd"><img src="/image/twttr.png" width="50"></a>
-		</p>
-	</center>
+  <center>
+    <p>
+      <a target="_blank" href="https://web.facebook.com/"><img src="/image/fcbk.png" width="50"></a>
+      <a target="_blank" href="https://twitter.com/"><img src="/image/twttr.png" width="50"></a>
+    </p>
+  </center>
 </div>
 </body>
 </html>
