--- a/index.html
+++ b/index.html
@@ -1,32 +1,86 @@
 <!DOCTYPE html>
-<html style="background: url(image/bgani.jpg); background-size: 100% 100%; background-repeat: repeat-y;">
+<html>
 <head>
-	<title>Watch anime</title>
-	<link rel="stylesheet" type="text/css" href="css/style.css" />
+  <title>Watch anime</title>
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta/css/bootstrap.min.css" integrity="sha384-/Y6pD6FV/Vv2HJnA6t+vslU6fwYXjCFtcEpHbNJ0lyAFsXTsjBbfaDjzALeQsN6M" crossorigin="anonymous">
+  <link rel="stylesheet" type="text/css" href="css/style.css" />
+  <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.11.0/umd/popper.min.js" integrity="sha384-b/U6ypiBEHpOf/4+1nzFpr53nxSS+GLCkfwBdFNTxtclqqenISfwAzpKaMNFNmj4" crossorigin="anonymous"></script>
+<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta/js/bootstrap.min.js" integrity="sha384-h0AbiXch4ZDo7tp9hKZ4TsHbi047NrKGLO3SEJAg45jXxnGIfYzk4Si90RDIqNm1" crossorigin="anonymous"></script>
 </head>
-<body>
+<body background="/image/allAn.jpg">
+  <nav class="navbar navbar-expand-lg navbar-light bg-light sticky-top">
+      <a class="navbar-brand" href="/"><img src="/image/sharingan.png" height="75" width="75"></a>
+      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+
+      <div class="collapse navbar-collapse" id="navbarSupportedContent">
+        <ul class="navbar-nav mr-auto">
+            <li class="nav-item active">
+              <a class="nav-link" href="/">Home <span class="sr-only">(current)</span></a>
+            </li>
+            <li class="nav-item">
+<div class="btn-group">
+  <a class="nav-link" href="/list">List</a>
+  <a class="btn dropdown-toggle dropdown-toggle-split" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+    <span class="sr-only">Toggle Dropdown</span>
+  </a>
+  <div class="dropdown-menu">
+    <a class="dropdown-item" href="/Boruto">Boruto</a>
+    <a class="dropdown-item" href="/Boku">Boku</a>
+    <a class="dropdown-item" href="/OPM">One Punch Man</a>
+    <div class="dropdown-divider"></div>
+    <a class="dropdown-item" href="/list">More...</a>
+    </div>
+  </div>
+          </li>
+            <li class="nav-item">
+              <a class="nav-link disabled" href="/anotherPage">-</a>
+            </li>
+        </ul>
+        <form class="form-inline my-2 my-lg-0">
+            <input class="form-control mr-sm-2" type="text" placeholder="Search" aria-label="Search">
+            <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
+        </form>
+      </div>
+  </nav>
 <div class="container">
-	<br>
-	<center>
-		<a href="/"><img src="/image/sharingan.png" width="100" height="100"></a>
-		<br>
-		<br>
-		<p>
-			---------- <a href="/" style="color: #000000;">Home</a> | <a href="/list" style="color: #000000;">List</a> | <a href="anotherPage" style="color: #000000;">Another Page</a> ----------
-		</p>
-	<a href="/list">
-	<img src="/image/yess.png" border="0" height="600" width="1200" alt="List Anime">
-	</a>
-	</center>
-	<br>
+  <br>
+  <center>
+    <p>
+      <div id="carouselExampleSlidesOnly" class="carousel slide" data-ride="carousel">
+  <div class="carousel-inner">
+    <div class="carousel-item active">
+      <img class="d-block w-100" src="/image/yess.png" alt="Home" width="1200" height="500">
+    </div>
+    <div class="carousel-item">
+      <img class="d-block w-100" src="/image/BNNG.png" alt="Boruto Naruto Next Generation" width="1200" height="500">
+    </div>
+    <div class="carousel-item">
+      <img class="d-block w-100" src="/image/MHA.png" alt="My Hero Academia" width="1200" height="500">
+    </div>
+    <div class="carousel-item">
+      <img class="d-block w-100" src="/image/OPM.jpg" alt="One Punch Man" width="1200" height="500">
+    </div>
+    <div class="carousel-item">
+      <img class="d-block w-100" src="/image/OP.jpg" alt="One Piece" width="1200" height="500">
+    </div>
+    <div class="carousel-item">
+      <img class="d-block w-100" src="/image/DBS.png" alt="Dragon Ball Super" width="1200" height="500">
+    </div>
+  </div>
+</div>
+    </p>
+  </center>
 </div>
 <div class="footer">
-	<center>
-		<p>
-			<a target="_blank" href="https://web.facebook.com/kissanime.ru/"><img src="/image/fcbk.png" width="50"></a>
-			<a target="_blank" href="https://twitter.com/KissAnimeHd"><img src="/image/twttr.png" width="50"></a>
-		</p>
-	</center>
+  <center>
+    <p>
+      <a target="_blank" href="https://web.facebook.com/"><img src="/image/fcbk.png" width="50"></a>
+      <a target="_blank" href="https://twitter.com/"><img src="/image/twttr.png" width="50"></a>
+    </p>
+  </center>
 </div>
 </body>
 </html>
